# dotagents

./: .gitignore  CHANGELOG.md  README.md  build.py  install.py  mkdocs.yml  pyproject.toml
.agents/: AGENTS.md
.agents/dotagents/: DECISIONS.md  NOTES.md
.agents/dotagents/decisions/: D01.md  D02.md  D03.md  D04.md  D05.md  D06.md  D07.md  D08.md  D09.md  D10.md  D11.md  D12.md  D13.md  D14.md  D15.md  D16.md  D17.md  D18.md  D19.md  D20.md  D21.md  D22.md  D23.md  D24.md  D25.md  D26.md  D27.md  D28.md  D29.md  D30.md  D31.md  D32.md  D33-log-split.md  D33.md  D34.md  D35.md  D36.md  D37.md  D38.md  D39.md  (+17 more)
.agents/plans/: config_debt_from_2026_07_triage.md  config_design_log.md  consolidate_agents_private_sync.md  tools_as_dotagents_subcommands.md
.agents/plans/completed/: design_log_split_and_cli_merge.md  dotagents_cli_package.md  global_config_backlog.md  leak_guard_and_agents_md_retrofit.md  migrate_to_duho_0_3.md  overlay_decomposition.md  private_agents_sync.md
.agents/plans/completed/global_config_backlog/reviews/: codex.md
.github/workflows/: docs.yml  release.yml  test.yml
docs/: index.md
docs/api/: agents.md  cli.md  context.md  env.md  link.md  merge.md  overlays.md  reference.md  resolve.md  scope.md  skills.md  sync.md
docs/guide/: authoring.md  commands.md  install.md  overlays.md  private-sync.md
findings/: 2026-07-12_executed_plan_state_misread.md  2026-07-12_stale_plan_state_misread.md  README.md
flows/: PLAN.md  REPO.md
kb/: PYTHON.md
overlays/agents/: overlay.toml
overlays/engineering/: overlay.toml
overlays/engineering/engineering/: rules.md
overlays/flows/: MODELS.md  overlay.toml
overlays/flows/flows/: EXEC.md  PLAN.md  REPO.md
overlays/net/: overlay.toml  setup.py
overlays/net/kb/: NET.md
overlays/net/lib/: VENDORED.md
overlays/net/lib/certifi/: __init__.py  __main__.py
overlays/net/lib/httplib/: __init__.py  auth.py  cookies.py  fetch.py  jar.py  proxy.py  session.py  warnings.py
overlays/net/tests/: conftest.py  test_certifi.py  test_curl.py  test_proxy.py
overlays/node/: overlay.toml
overlays/node/references/: package.json
overlays/node/references/workflows/node/: docs.yaml  release.yaml
overlays/private-sync/: overlay.toml
overlays/private-sync/hooks/: _agents-git-auth.sh  cloud-setup.sh  private-sync-start.sh  private-sync-stop.sh  settings.snippet.json
overlays/private-sync/kb/: PRIVATE_SYNC.md
overlays/python/: overlay.toml
overlays/python/kb/: PYTHON.md
overlays/python/references/: mkdocs.yml  pyproject.toml
overlays/python/references/workflows/python/: docs.yml  release.yml  test.yml
overlays/recovery/: overlay.toml
overlays/recovery/kb/: RECOVERY.md
overlays/references/: overlay.toml
overlays/references/references/: .gitignore  master_refactoring_plan.md
overlays/release/: overlay.toml
overlays/release/kb/: RELEASE.md
overlays/release/tests/: test_hosts.py
overlays/release/tools/: hosts.py  release.py
overlays/rust/: overlay.toml
overlays/rust/references/: Cargo.toml
overlays/rust/references/workflows/rust/: docs.yaml  release.yaml  test.yaml
overlays/tools/: overlay.toml
overlays/tools/tools/: compare_bench.py  summarize_run.py
payload/: AGENTS.md
payload/dotagents/: DECISIONS.md  log.md
payload/examples/: antigravity.md
payload/examples/kb/: NODE.md  PYTHON.md  RUST.md
payload/examples/references/workflows/node/: test.yaml
payload/examples/references/workflows/rust/: release.yaml
payload/flows/: EXEC.md  PLAN.md  REPO.md  REVIEW.md
payload/kb/: RECOVERY.md
payload/references/: README.md  master_refactoring_plan.md
payload/tools/: audit_config.py
references/: CHANGELOG.md  docs-index.md  pyproject.toml
references/workflows/node/: release.yaml
references/workflows/python/: release.yml
src/dotagents/: AGENTS.md  __init__.py  __main__.py  _agents.py  _context.py  _env.py  _link.py  _merge.py  _overlays.py  _resolve.py  _scope.py  _skills.py  _sync.py  _wrappers.py  cli.py
src/dotagents/_overlay/: AGENTS.md  CLAUDE.md  README.md
src/dotagents/_overlay/dotagents/: DECISIONS.md
src/dotagents/_overlay/dotagents/cmds/: audit.py  link.py  sync.py
src/dotagents/cli/: __init__.py  _common.py  audit.py  build_pyz.py  context.py  env.py  init.py  install.py  leak_check.py  link.py  overlays.py  sync.py
tests/: test_agents.py  test_audit_leak.py  test_cmds_discovery.py  test_context.py  test_env.py  test_env_format.py  test_link_hooks.py  test_overlays_command.py  test_scope.py
tools/: audit.py  audit_config.py  cloud-setup.sh  leak_check.py
