[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dotagents"
version = "0.1.0"
authors = [{ name = "Jose A." }]
description = "Installable CLI for the dotagents agent-config payload (init/install/build-pyz/audit)"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "duho>=0.1.1",
    "pathlib_next>=0.8.0",
]

[project.optional-dependencies]
uri = ["pathlib_next[uri]"]
http = ["pathlib_next[http]"]
sftp = ["pathlib_next[sftp]"]
s3 = ["pathlib_next[s3]"]

[project.scripts]
dotagents = "dotagents.cli:main"

[project.urls]
Homepage = "https://github.com/jose-pr/dotagents/"
Repository = "https://github.com/jose-pr/dotagents"

[tool.hatch.build.targets.sdist]
exclude = ["/.*", "/dist", "/.venv-test"]

[tool.hatch.build.targets.wheel]
packages = ["src/dotagents"]
