[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Distribution name is `dotagents-cli` (the `dotagents` name on PyPI is taken /
# reserved for the namespace). The import package stays `dotagents` (see
# tool.hatch...packages) and the console script stays `dotagents` (project.scripts),
# so `pip install dotagents-cli` gives you `import dotagents` and a `dotagents` command.
[project]
name = "dotagents-cli"
version = "0.2.0"
authors = [{ name = "Jose A." }]
description = "The dotagents CLI: install and manage a portable ~/.agents config for AI coding agents"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "duho>=0.4.0",
    "pathlib_next>=0.8.0",
]

[project.optional-dependencies]
uri = ["pathlib_next[uri]"]
http = ["pathlib_next[http]"]
sftp = ["pathlib_next[sftp]"]
s3 = ["pathlib_next[s3]"]
dev = ["pytest"]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

[project.scripts]
dotagents = "dotagents.cli:main"

[project.urls]
Homepage = "https://github.com/jose-pr/dotagents/"
Repository = "https://github.com/jose-pr/dotagents"
Documentation = "https://jose-pr.github.io/dotagents/"

[tool.hatch.build.targets.sdist]
exclude = ["/.*", "/dist", "/.venv-test"]

[tool.hatch.build.targets.wheel]
packages = ["src/dotagents"]
