[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "<project_name>"
version = "0.1.0"
authors = [{ name = "<copyright_holder>" }]
description = "<one-line description>"
readme = "README.md"
requires-python = ">=3.9"
# PEP 639: SPDX license expression + the file(s) it refers to. This replaces the
# legacy `License ::` classifier (do NOT also list one -- modern build backends
# reject the pair).
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
    "Operating System :: OS Independent",
]
# Zero required runtime deps where feasible; integrations go in extras (kb/PYTHON.md).
dependencies = []

[project.optional-dependencies]
# EXECUTOR: one extra per optional integration, guarded in code by try/except ImportError.
"<extra>" = ["<dependency>"]
dev = ["build", "pytest"]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings[python]"]

[project.urls]
Homepage = "https://github.com/<gh_org>/<project_name>/"
Documentation = "https://<gh_org>.github.io/<project_name>/"
Issues = "https://github.com/<gh_org>/<project_name>/issues"

[tool.hatch.build.targets.sdist]
exclude = ["/.*", "/benchmarks"]

[tool.hatch.build.targets.wheel]
packages = ["src/<package_name>"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
